Adjusting script error in resources

--- a/questionary/templates/questionary/view.html
+++ b/questionary/templates/questionary/view.html
@@ -180,7 +180,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 $('.modal').modal('show');
             });
         }
-    <script>
+    </script>
 {% endblock %}
 
 
