--- a/goals/templates/goals/view.html
+++ b/goals/templates/goals/view.html
@@ -134,7 +134,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 					$('.modal').modal('show');
 				});
 			}
-		<script>
+		</script>
 {% endblock %}
 
 
