--- a/pdf_file/templates/pdf_file/view.html
+++ b/pdf_file/templates/pdf_file/view.html
@@ -87,5 +87,5 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 $('.modal').modal('show');
             });
         }
-    <script>
+    </script>
 {% endblock content %}
