--- a/webpage/templates/webpages/view.html
+++ b/webpage/templates/webpages/view.html
@@ -89,5 +89,5 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 $('.modal').modal('show');
             });
         }
-    <script>
+    </script>
 {% endblock %}
