Adjusting duplicate counts in questions database

--- a/questionary/templates/questionary/_form.html
+++ b/questionary/templates/questionary/_form.html
@@ -688,6 +688,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         });
 
 		$('.n_questions').on('focus', function () {
+			var subject = $("#id_control_subject").val();
 			var $sel   = $(this),
 				values = $sel.parent().parent().find('.spec_categories').val(),
 				number = $sel.parent().find('.n_question_val').val();
@@ -698,7 +699,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 				$.ajax({
 					method: 'GET',
 					url: "{% url 'questionary:countQ' %}",
-					data: {'values': values.join(',')},
+					data: {'values': values.join(','), 'subject_id': subject},
 					success: function (response) {
 						if (response.total > 0) {
 							for (var i = 1; i <= response.total; ++i) {
@@ -714,6 +715,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 		});
 
 		$('.n_questions').each(function () {
+			var subject = $("#id_control_subject").val();
 			var $sel   = $(this),
 				values = $sel.parent().parent().find('.spec_categories').val(),
 				number = $sel.parent().find('.n_question_val').val();
@@ -724,7 +726,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 				$.ajax({
 					method: 'GET',
 					url: "{% url 'questionary:countQ' %}",
-					data: {'values': values.join(',')},
+					data: {'values': values.join(','), 'subject_id': subject},
 					success: function (response) {
 						if (response.total > 0) {
 							for (var i = 1; i <= response.total; ++i) {
