--- a/goals/templates/goals/_form.html
+++ b/goals/templates/goals/_form.html
@@ -154,6 +154,26 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <br clear="all" />
 
 		<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
+			<label for="{{ form.init_date.auto_id }}">{{ form.init_date.label }} <span>*</span></label>
+			{% render_field form.init_date class='form-control datetime-picker' %}
+
+			<span id="helpBlock" class="help-block">{{ form.init_date.help_text }}</span>
+				
+			{% if form.init_date.errors %}
+				<div class="alert alert-danger alert-dismissible" role="alert">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					<ul>
+						{% for error in form.init_date.errors %}
+							<li>{{ error }}</li>
+						{% endfor %}
+					</ul>
+				</div>
+			{% endif %}
+		</div>
+
+		<div class="form-group{% if form.has_error %} has-error {% endif %} is-fileinput">
 			<label for="{{ form.limit_submission_date.auto_id }}">{{ form.limit_submission_date.label }} <span>*</span></label>
 			{% render_field form.limit_submission_date class='form-control datetime-picker' %}
 
@@ -214,153 +234,6 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 				</div>
 			{% endif %}
 		</div>
-		
-		<div class="panel panel-info">
-			<div class="panel-heading">
-    			<div class="row">
-        			<div class="col-md-12">
-            			<a data-parent="#professors_accordion" data-toggle="collapse" href="#notifications">
-            				<h4 class="panel-title">
-                    			<button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button><label>{% trans 'Pendencies Notifications' %}</label>
-            				</h4>
-            			</a>
-            		</div>
-            	</div>
-            </div>
-            <div id="notifications" class="panel-collapse collapse">
-            	{{ pendencies_form.management_form }}
-                {% if pendencies_form.non_form_errors %}
-            		<div class="alert alert-danger alert-dismissible" role="alert">
-						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-            			{{ pendencies_form.non_form_errors }}
-                	</div>	
-                {% endif %}
-
-				{% for notify in pendencies_form %}
-	        		<div class="notifies">
-	        			<div style="text-align:left">
-	            			{% render_field notify.id %}
-	            			{% render_field notify.resource %}
-	            			{% render_field notify.subject class='pend_subj' %}
-		            		
-	            			{% if notify.instance.pk %}{{ notify.DELETE }}{% endif %}
-		            		
-		            		<div class="form-group{% if notify.has_error %} has-error {% endif %} row">
-		            			<label for="{{ notify.action.auto_id }}" class="pull-left action_label contol-label">
-		            				{% trans 'Action not performed by the user' %}: 
-		        				</label>
-		        				<div class="col-md-3">
-		        					{% render_field notify.action class='form-control' %}
-		        				</div>
-
-		        				<br clear="all" />
-
-		        				<span id="helpBlock" class="help-block">{{ notify.action.help_text }}</span>
-			
-								{% if notify.action.errors %}
-									<div class="alert alert-danger alert-dismissible" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-										<ul>
-											{% for error in notify.action.errors %}
-												<li>{{ error }}</li>
-											{% endfor %}
-										</ul>
-									</div>
-								{% endif %}
-		            		</div>
-		            		<br clear="all" />
-		            		<div class="row">
-		            			<div class="col-md-12">
-		            				<p>{% trans 'Wished period' %}: </p>
-		            			</div>
-		            		</div>
-		            		<div class="form-group{% if notify.has_error %} has-error {% endif %} row">
-		            			<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 checkbox">
-							        <label>
-				      					{% render_field notify.begin_date_check class="begin_date" %} {{ notify.begin_date.label }}
-				  					</label>
-						        </div>
-						        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						        	{% render_field notify.begin_date class='form-control datetime-picker begin_date_input' %}
-						        </div>						        
-		            		</div>
-		            		<div class="row">
-		            			<span id="helpBlock" class="help-block">{{ notify.begin_date.help_text }}</span>
-			
-								{% if notify.begin_date.errors %}
-									<div class="alert alert-danger alert-dismissible" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-										<ul>
-											{% for error in notify.begin_date.errors %}
-												<li>{{ error }}</li>
-											{% endfor %}
-										</ul>
-									</div>
-								{% endif %}
-		            		</div>
-		            		<div class="form-group{% if notify.has_error %} has-error {% endif %} row">
-		            			<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 checkbox">
-							        <label>
-				      					{% render_field notify.end_date_check class="end_date" %} {{ notify.end_date.label }}
-				  					</label>
-						        </div>
-						        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-						        	{% render_field notify.end_date class='form-control datetime-picker end_date_input' %}
-						        </div>
-		            		</div>
-		            		<div class="row">
-		            			<span id="helpBlock" class="help-block">{{ notify.end_date.help_text }}</span>
-			
-								{% if notify.end_date.errors %}
-									<div class="alert alert-danger alert-dismissible" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-										<ul>
-											{% for error in notify.end_date.errors %}
-												<li>{{ error }}</li>
-											{% endfor %}
-										</ul>
-									</div>
-								{% endif %}
-		            		</div>
-		            		<div class="form-group{% if notify.has_error %} has-error {% endif %} row">
-		            			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 checkbox">
-							        <label>
-				      					{% render_field notify.limit_date_check class="limit_date" %} {{ notify.limit_date.label }}
-				  					</label>
-						        </div>
-						        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-						        	{% render_field notify.limit_date class='form-control datetime-picker limit_date_input' %}
-						        </div>
-		            		</div>
-		            		<div class="row">
-		            			<span id="helpBlock" class="help-block">{{ notify.limit_date.help_text }}</span>
-			
-								{% if notify.limit_date.errors %}
-									<div class="alert alert-danger alert-dismissible" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-										<ul>
-											{% for error in notify.limit_date.errors %}
-												<li>{{ error }}</li>
-											{% endfor %}
-										</ul>
-									</div>
-								{% endif %}
-		            		</div>
-		            	</div>
-	            	</div>
-	            {% endfor %}
-            </div>
-        </div>
     </div>
 
 	<div class="form-group{% if form.has_error %} has-error {% endif %}">
