--- a/dashboards/templates/dashboards/manager/_users_graph.html
+++ b/dashboards/templates/dashboards/manager/_users_graph.html
@@ -12,7 +12,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% load static i18n %}
 
 <div class="row">
-     <div class="col-md-12 usersgraph" data-url=""> 
+     <div class="col-md-12 usersgraph" data-url="{% url 'dashboards:general_bar_chart' %}"> 
         <div class="header">
             <div class="identifier">
                 <b>
@@ -30,31 +30,31 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="active-users">
                         <div class="col-md-12">
                             <div class="col-md-6 teacher-active">
-                                <div class="legend-chart">
-                                    Professores(84) 
+                                <div class="legend-chart" id="legend_teacher">
+                                    Professores
                                 </div>
                                 <div class="col-md-12">
                                     <div class="col-md-8" id="teacher-active">
-                                        <p id="number-teacher-active">63</p>
+                                        <p id="number-teacher-active">0</p>
                                     </div>
                                     <div class="col-md-4" id="teacher-percent-1">
                                         <div class="col-md-12" id="teacher-percent-2">
-                                            <p id="teacher-percent-value">75%</p>
+                                            <p id="teacher-percent-value">0</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="legend-chart">
-                                    Estudantes (894) 
+                                <div class="legend-chart" id="legend_students">
+                                    Estudantes 
                                 </div>
                                 <div class="col-md-12 students-active">
                                     <div class="col-md-8" id="students-active">
-                                        <p id="number-students-active">536</p>
+                                        <p id="number-students-active">0</p>
                                     </div>
                                     <div class="col-md-4" id="students-percent-1">
                                         <div class="col-md-12" id="students-percent-2">
-                                            <p id="students-percent-value">60%</p>
+                                            <p id="students-percent-value">0</p>
                                             
                                         </div>
                                     </div>
@@ -73,11 +73,11 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             <div class="col-md-6 teacher-inactive">
                                 <div class="col-md-12">
                                     <div class="col-md-8" id="teacher-inactive">
-                                        <p id="number-teacher-inactive">21</p>
+                                        <p id="number-teacher-inactive">0</p>
                                     </div>
                                     <div class="col-md-4" id="percent-teacher-inactive-1">
                                         <div class="col-md-12" id="percent-teacher-inactive-2">
-                                            <p id="percent-teacher-value">25%</p>
+                                            <p id="percent-teacher-value">0</p>
                                         </div>
                                     </div>
                                 </div>
@@ -85,11 +85,11 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             <div class="col-md-6">
                                 <div class="col-md-12 students-inactive">
                                     <div class="col-md-8" id="students-inactive">
-                                        <p id="number-students-inactive">358</p>
+                                        <p id="number-students-inactive">0</p>
                                     </div>
                                     <div class="col-md-4" id="percent-students-inactive-1">
                                         <div class="col-md-12" id="percent-students-inactive-2">
-                                            <p id="percent-students-value">40%</p>
+                                            <p id="percent-students-value">0</p>
                                             
                                         </div>
                                     </div>
@@ -108,4 +108,4 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     </div>
 </div>
 
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="{% static 'dashboards/js/manager/users_bar.js' %}"></script>
