--- a/dashboards/templates/dashboards/manager/_logs_table.html
+++ b/dashboards/templates/dashboards/manager/_logs_table.html
@@ -12,7 +12,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% load static i18n %}
 
 <div class="row">
-    <div class="col-md-12 recordedlogs" data-url="">
+    <div class="col-md-12 recordedlogs" data-url="{% url 'dashboards:recordedlogs' %}">
         <div class="header">
                 <div class="identifier">
                 <b>{% trans 'More recorded logs' %}</b>
@@ -49,7 +49,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 <div id="table-container" class="table-responsive">
                                     <table id="categories_table" class="table table-hover">
                                         <thead>
-                                            <tr>
+                                            <tr id="accordion_legend">
                                                 <th class="sort" scope="col" data-sort="name">
                                                     {% trans 'Category' %}
                                                     <i class="fa fa-sort"></i>
@@ -90,7 +90,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 <div id="table-container" class="table-responsive">
                                     <table id="subjects_table" class="table table-hover">
                                         <thead>
-                                            <tr>
+                                            <tr id="accordion_legend">
                                                 <th class="sort" scope="col" data-sort="name">
                                                     {% trans 'Subject' %}
                                                     <i class="fa fa-sort"></i>
@@ -133,7 +133,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 <div id="table-container" class="table-responsive">
                                     <table id="resources_table" class="table table-hover">
                                         <thead>
-                                            <tr>
+                                            <tr id="accordion_legend">
                                                 <th class="sort" scope="col" data-sort="name">
                                                     {% trans 'Resource' %}
                                                     <i class="fa fa-sort"></i>
@@ -165,4 +165,4 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     </div>
 </div>
 
-<script type="text/javascript" src="{% static 'dashboards/js/manager/resources_table.js' %}"></script>
+<script type="text/javascript" src="{% static 'dashboards/js/manager/recordedlogs_table.js' %}"></script>
