Hiding menu button

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -394,8 +394,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </a>
                         </li>
                         {% if has_analytics_permissions %}
-                            <li class="item" data-toggle="tooltip" data-placement="right" title="{% trans "Analytics" %}">
-                                <a href=""><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a>
+                            <li class="item {{ dashboard_menu_active }}" data-toggle="tooltip" data-placement="right" title="{% trans "Analytics" %}">
+                                <a href="{% url 'dashboards:view_manager_dashboard' %}"><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a>
                             </li>
                         {% endif %}
                         {% if show_support %}
@@ -465,8 +465,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </a>
                         </li>
                         {% if has_analytics_permissions %}
-                            <li class="item" data-toggle="tooltip" data-placement="top" title="{% trans "Analytics" %}">
-                                <a href=""><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a>
+                            <li class="item {{ dashboard_menu_active }}" data-toggle="tooltip" data-placement="top" title="{% trans "Analytics" %}">
+                                <a href="{% url 'dashboards:view_manager_dashboard' %}"><i class="fa fa-bar-chart" aria-hid{% get_current_language as LANGUAGE_CODE %}den="true"></i></a>
                             </li>
                         {% endif %}
                         {% if show_support %}
