--- a/dashboards/templates/dashboards/manager/_logs_table.html
+++ b/dashboards/templates/dashboards/manager/_logs_table.html
@@ -71,7 +71,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-info category-panel">
+                <div class="panel panel-info subject-panel">
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
@@ -84,7 +84,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                             </div>
                         </div>
                     </div>
-                    <div id="collapse2" class="panel-collapse collapse">
+                    <div id="collapse2" class="panel-collapse collapse ">
                         <div class="panel-body">
                             <div class="users_table">
                                 <div id="table-container" class="table-responsive">
@@ -114,12 +114,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     </div>
                         
                 </div>
-                <div class="panel panel-info category-panel">
+                <div class="panel panel-info topic-panel">
                     <div class="panel-heading">
                         <div class="row">
                             <div class="col-md-12 category-header">
                                 <h4 class="panel-title">
-                                    <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#collapse3">
+                                    <a class="category-course-link pull-left" data-parent="#resource-accordion" data-toggle="collapse" href="#collapse3">
                                         <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {% trans 'Resources' %}
                                     </a>
                                     
