--- a/dashboards/templates/dashboards/manager/_logs_table.html
+++ b/dashboards/templates/dashboards/manager/_logs_table.html
@@ -119,7 +119,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         <div class="row">
                             <div class="col-md-12 category-header">
                                 <h4 class="panel-title">
-                                    <a class="category-course-link pull-left" data-parent="#resource-accordion" data-toggle="collapse" href="#collapse3">
+                                    <a class="category-course-link pull-left" data-parent="#accordion" data-toggle="collapse" href="#collapse3">
                                         <button class="btn btn-default btn-xs text-center cat-selector"><i class="fa fa-angle-right fa-2x" aria-hidden="true"></i></button> {% trans 'Resources' %}
                                     </a>
                                     
