Correções de consultas do line chart e ajustes do dash

--- a/dashboards/templates/dashboards/manager/_logs_graph.html
+++ b/dashboards/templates/dashboards/manager/_logs_graph.html
@@ -17,7 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <div class="identifier">
                 <b>
                     {% trans 'Recorded logs in the system' %}
-                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the number of distinct students in each day' %}"></i>
+                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Represents a series with the set of number of logs in the selected period.' %}"></i>
                 </b>
             </div>
         </div>
